@@ -19,7 +19,6 @@ package com.sun.enterprise.admin.cli.optional;
 
 import com.sun.enterprise.admin.cli.CLIProcessExecutor;
 import com.sun.enterprise.admin.cli.Environment;
-import com.sun.enterprise.universal.i18n.LocalStringsImpl;
 import com.sun.enterprise.util.OS;
 
 import java.io.File;
@@ -29,6 +28,7 @@ import org.glassfish.api.Param;
 import org.glassfish.api.admin.CommandException;
 import org.glassfish.api.admin.CommandValidationException;
 import org.glassfish.hk2.api.PerLookup;
+import org.glassfish.main.jdke.i18n.LocalStringsImpl;
 import org.jvnet.hk2.annotations.Service;
 
 import static com.sun.enterprise.admin.cli.CLIUtil.readPasswordFileOptions;
@@ -81,8 +81,11 @@ public final class StopDatabaseCommand extends DatabaseCommand {
                     javaHome + separator + "bin" + separator + "java",
                     "-Djava.library.path=" + installRoot + separator + "lib",
                     "-Dderby.storage.fileSyncTransactionLog=True",
+                    "--module-path",
+                    modulepath.toString(),
+                    "--add-modules",
+                    "ALL-MODULE-PATH",
                     "-cp", sClasspath + pathSeparator + sDatabaseClasspath,
-
                     "com.sun.enterprise.admin.cli.optional.DerbyControl",
                     "shutdown",
                     dbHost, dbPort, "false" };
@@ -91,8 +94,11 @@ public final class StopDatabaseCommand extends DatabaseCommand {
             return new String[] {
                 javaHome + separator + "bin" + separator + "java",
                 "-Djava.library.path=" + installRoot + separator + "lib",
+                "--module-path",
+                modulepath.toString(),
+                "--add-modules",
+                "ALL-MODULE-PATH",
                 "-cp", sClasspath + pathSeparator + sDatabaseClasspath,
-
                 "com.sun.enterprise.admin.cli.optional.DerbyControl",
                 "shutdown",
                 dbHost, dbPort, "false" };
@@ -100,10 +106,13 @@ public final class StopDatabaseCommand extends DatabaseCommand {
 
         if (OS.isDarwin()) {
             return new String[] { javaHome + separator + "bin" + separator + "java",
-                "-Djava.library.path=" + installRoot + separator +
-                "lib", "-Dderby.storage.fileSyncTransactionLog=True",
+                "-Djava.library.path=" + installRoot + separator + "lib",
+                "-Dderby.storage.fileSyncTransactionLog=True",
+                "--module-path",
+                modulepath.toString(),
+                "--add-modules",
+                "ALL-MODULE-PATH",
                 "-cp", sClasspath + pathSeparator + sDatabaseClasspath,
-
                 "com.sun.enterprise.admin.cli.optional.DerbyControl",
                 "shutdown",
                 dbHost, dbPort, "false", dbUser, dbPassword };
@@ -112,8 +121,11 @@ public final class StopDatabaseCommand extends DatabaseCommand {
         return new String[] {
             javaHome + separator + "bin" + separator + "java",
             "-Djava.library.path=" + installRoot + separator + "lib",
+            "--module-path",
+            modulepath.toString(),
+            "--add-modules",
+            "ALL-MODULE-PATH",
             "-cp", sClasspath + pathSeparator + sDatabaseClasspath,
-
             "com.sun.enterprise.admin.cli.optional.DerbyControl",
             "shutdown",
             dbHost, dbPort, "false", dbUser, dbPassword };
